forecast model tuned

--- a/classificate.ipynb
+++ b/classificate.ipynb
@@ -802,8 +802,8 @@
     }
    ],
    "source": [
-    "plt.plot(history.history['accuracy'], color='g', label='Training Loss')\n",
-    "plt.plot(history.history['val_accuracy'], color='b', label='Validation Loss')\n",
+    "plt.plot(history.history['accuracy'], color='g', label='Training Accuracy')\n",
+    "plt.plot(history.history['val_accuracy'], color='b', label='Validation Accuracy')\n",
     "plt.title(\"Accuracy vs Val Accuracy\")\n",
     "plt.legend()\n",
     "plt.show()"
