temporary api.py

--- a/classificate.ipynb
+++ b/classificate.ipynb
@@ -635,6 +635,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "temperature_celsius     26.60\n",
+       "wind_kph                13.30\n",
+       "wind_degree            338.00\n",
+       "pressure_in             29.89\n",
+       "precip_in                0.00\n",
+       "humidity                24.00\n",
+       "cloud                   30.00\n",
+       "uv_index                 7.00\n",
+       "Name: 0, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
